Configuración por defecto de Flexbox

--- a/flexbox.html
+++ b/flexbox.html
@@ -9,7 +9,27 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="box"></div>
+    <div class="displayFlex">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </div>
 </body>
 </html>
