--- a/flexbox.html
+++ b/flexbox.html
@@ -8,7 +8,42 @@
   <title>Flexbox Layout</title>
 </head>
 <body>
+  <div class="div wrapper">
+    <h2>Flex Direction</h2>
+    <div class="flexDirection">
+      <div class="box">primer</div>
+      <div class="box">segundo</div>
+      <div class="box">tercero</div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
+    <form action="">
+      <input type="text" placeholder="ingresa su mensaje"><button>Enviar</button>
+    </form>
+  </div>
   <div class="wrapper">
+    <h2>Flex Order</h2>
+    <div class="flexOrder">
+      <img src="./images/grand-escape.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non recusandae soluta quo cumque est nobis, unde ducimus modi, exercitationem aut corporis perferendis fugiat tempore laudantium officia. Cumque, itaque maxime.</p>
+    </div>
+    <div class="flexOrder">
+      <img src="./images/grand-escape.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non recusandae soluta quo cumque est nobis, unde
+        ducimus modi, exercitationem aut corporis perferendis fugiat tempore laudantium officia. Cumque, itaque maxime.</p>
+    </div>
+    <div class="flexOrder">
+      <img src="./images/grand-escape.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non recusandae soluta quo cumque est nobis, unde
+        ducimus modi, exercitationem aut corporis perferendis fugiat tempore laudantium officia. Cumque, itaque maxime.</p>
+    </div>
+  </div>
+  <div class="wrapper">
+    <h2>Default flex</h2>
     <div class="displayFlex">
       <div class="box"></div>
       <div class="box"></div>
