--- a/flexbox.html
+++ b/flexbox.html
@@ -8,6 +8,25 @@
   <title>Flexbox Layout</title>
 </head>
 <body>
+  <div class="wrapper">
+    <h2>Flex Wrap</h2>
+    <div class="flexWrap">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <img src="./images/grand-escape.jpg" alt="">
+      <div class="box"></div>
+    </div>
+  </div>
   <div class="div wrapper">
     <h2>Flex Direction</h2>
     <div class="flexDirection">
