--- a/flexbox.html
+++ b/flexbox.html
@@ -9,6 +9,15 @@
 </head>
 <body>
   <div class="wrapper">
+    <h2>Flex</h2>
+    <div class="flex">
+      <img src="./images/grand-escape.jpg" alt="">
+      <div>
+        <button>hola</button>
+      </div>
+    </div>
+  </div>
+  <div class="wrapper">
     <h2>Flex Wrap</h2>
     <div class="flexWrap">
       <div class="box"></div>
