Creando una fuente personalizada con íconos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Spotifu</title>
 </head>
 <body>
-  <i class="icon-home"></i>
-  <i class="icon-home-active"></i>
+  <button>
+    <i class="icon-home"></i>
+  </button>
+  <i class="icon-homeActive"></i>
 </body>
 </html>
