Estilos de Texto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Spotifu</title>
 </head>
 <body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores exercitationem accusamus quas at ad quod voluptates provident, labore consequuntur facilis architecto officia mollitia dolor voluptas pariatur esse distinctio nobis.</p>
   <button>
     <i class="icon-home"></i>
   </button>
