Estilos de cuerpos y enlaces

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="./css/index.css">
   <title>Spotifu</title>
 </head>
-<body>
+<body class="body">
+  <a href="#" class="link">click aquí</a>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores exercitationem accusamus quas at ad quod voluptates provident, labore consequuntur facilis architecto officia mollitia dolor voluptas pariatur esse distinctio nobis.</p>
   <button>
     <i class="icon-home"></i>
