--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <a href="#" class="link">click aquí</a>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores exercitationem accusamus quas at ad quod voluptates provident, labore consequuntur facilis architecto officia mollitia dolor voluptas pariatur esse distinctio nobis.</p>
-  <button>
-    <i class="icon-home"></i>
-  </button>
-  <i class="icon-homeActive"></i>
+  <div style="background-color: red;">
+    <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir">
+      <i class="icon-play" aria-hidden="true"></i>
+    </button>
+
+    <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+      <i class="icon-play" aria-hidden="true"></i>
+    </button>
+
+    <button class="buttonIcon" aria-label="Reproducir" title="Reproducir">
+      <i class="icon-play" aria-hidden="true"></i>
+    </button>
+  </div>
 </body>
 </html>
