--- a/index.html
+++ b/index.html
@@ -8,91 +8,93 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <header class="logo">
-    <a href="/" aria-current="page">
-      <img src="./images/spotifu-logo.png" class="logo-image" width="112" height="32" alt="">
-    </a>
-  </header>
+  <div class="sidebar">
+    <header class="logo">
+      <a href="/" aria-current="page">
+        <img src="./images/spotifu-logo.png" class="logo-image" width="112" height="32" alt="">
+      </a>
+    </header>
 
-  <nav class="menu" aria-label="Principal">
-    <ul class="menu-list">
-      <li class="menuItem is-active">
-        <a href="/" class="link" aria-current="page">
-          <i class="icon-home" aria-hidden="true"></i>
-          <span>Inicio</span>
-        </a>
-      </li>
-      <li class="menuItem">
-        <a href="/" class="link" aria-current="page">
-          <i class="icon-search" aria-hidden="true"></i>
-          <span>Buscar</span>
-        </a>
-      </li>
-      <li class="menuItem">
-        <a href="/" class="link" aria-current="page">
-          <i class="icon-creditCard" aria-hidden="true"></i>
-          <span>Premium</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="menu" aria-label="Principal">
+      <ul class="menu-list">
+        <li class="menuItem is-active">
+          <a href="/" class="link" aria-current="page">
+            <i class="icon-home" aria-hidden="true"></i>
+            <span>Inicio</span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="/" class="link" aria-current="page">
+            <i class="icon-search" aria-hidden="true"></i>
+            <span>Buscar</span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="/" class="link" aria-current="page">
+            <i class="icon-creditCard" aria-hidden="true"></i>
+            <span>Premium</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-  <nav class="list" aria-labelledby="library-navigation">
-    <h2 class="list-tittle" id="library-navigation">Tu biblioteca</h2>
-    <ul class="list-content">
-      <li class="list-item">
-        <a href="#" class="link">Creada para ti</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Escuchado recientemente</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Tus Me Gustas</a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="list" aria-labelledby="library-navigation">
+      <h2 class="list-tittle" id="library-navigation">Tu biblioteca</h2>
+      <ul class="list-content">
+        <li class="list-item">
+          <a href="#" class="link">Creada para ti</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Escuchado recientemente</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Tus Me Gustas</a>
+        </li>
+      </ul>
+    </nav>
 
-  <nav class="list" aria-labelledby="playlist-navigation">
-    <h2 class="list-tittle" id="playlist-navigation">Playlist</h2>
-    <ul class="list-content">
-      <li class="list-item">
-        <a href="#" class="link">Lo mejor de lo mejor</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Naruto al 100% para progr...</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Para cantar en la ducha</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Sin parar</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Naruto openings</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Boku no pico</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">This is Pokémon</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Más populares de la semana</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Mis pistas de shazam</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Audio Library</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Amor y otras</a>
-      </li>
-      <li class="list-item">
-        <a href="#" class="link">Latin</a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="list" aria-labelledby="playlist-navigation">
+      <h2 class="list-tittle" id="playlist-navigation">Playlist</h2>
+      <ul class="list-content">
+        <li class="list-item">
+          <a href="#" class="link">Lo mejor de lo mejor</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Naruto al 100% para progr...</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Para cantar en la ducha</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Sin parar</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Naruto openings</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Boku no pico</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">This is Pokémon</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Más populares de la semana</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Mis pistas de shazam</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Audio Library</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Amor y otras</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Latin</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
   <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir">
     <i class="icon-play" aria-hidden="true"></i>
