--- a/index.html
+++ b/index.html
@@ -57,40 +57,64 @@
       <h2 class="list-tittle" id="playlist-navigation">Playlist</h2>
       <ul class="list-content">
         <li class="list-item">
-          <a href="#" class="link">Lo mejor de lo mejor</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Lo mejor de lo mejor</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Naruto al 100% para progr...</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Naruto al 100% para progr</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Para cantar en la ducha</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Para cantar en la ducha</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Sin parar</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Sin parar</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Naruto openings</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Naruto openings</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Boku no pico</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Boku no pico</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">This is Pokémon</a>
+          <span class="ellipsis">
+            <a href="#" class="link">This is Pokémon</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Más populares de la semana</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Más populares de la semana</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Mis pistas de shazam</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Mis pistas de shazam</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Audio Library</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Audio Library</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Amor y otras</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Amor y otras</a>
+          </span>
         </li>
         <li class="list-item">
-          <a href="#" class="link">Latin</a>
+          <span class="ellipsis">
+            <a href="#" class="link">Latin</a>
+          </span>
         </li>
       </ul>
     </nav>
