--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus et culpa eveniet distinctio quaerat eius, at optio quasi? Dolorum obcaecati molestias error debitis facere dolor tenetur, repudiandae quasi! Qui, voluptatibus!</p>
+  <div class="slider">
+    <div class="slider-progress">
+      <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+    </div>
+  </div>
+
   <div class="sidebar">
     <header class="logo">
       <a href="/" aria-current="page">
