--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="body">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus et culpa eveniet distinctio quaerat eius, at optio quasi? Dolorum obcaecati molestias error debitis facere dolor tenetur, repudiandae quasi! Qui, voluptatibus!</p>
   <div class="playerControls">
-    <div class="playerControls-buttons">
+    <div class="playerControls-buttons" aria-label="Controles de reproducción">
       <button class="buttonIcon" aria-label="Anterior" title="Anterior">
         <i class="icon-prev" aria-hidden="true"></i>
       </button>
@@ -55,9 +55,21 @@
             <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
           </div>
         </div>
-
       </div>
       <span class="playerPlayback-progressTime">01:40</span>
+    </div>
+  </div>
+
+  <div class="playerVolume">
+    <button class="player-control" aria-label="Silenciar" aria-describedby="volumen-icon">
+      <i class="icon-volumeUp" role="presentation" aria-label="Volumen alto"></i>
+    </button>
+    <div class="playerVolume-slider">
+      <div class="slider">
+        <div class="slider-progress">
+          <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+        </div>
+      </div>
     </div>
   </div>
 
