--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div class="playlistList-container">
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/dance-monkey.jpg" width="76" height="76" alt="Cover Dance Monkey">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Dance Monkey, Tones And I</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Dance Monkey"
+              title="Reproducir la lista de reproducción Dance Monkey">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -56,13 +56,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/deja-vu.jpg" width="76" height="76" alt="Cover Deja Vu">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Deja Vu, Olivia Rodrigo</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Deja Vu"
+              title="Reproducir la lista de reproducción Deja Vu">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -70,13 +70,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/drivers-license.jpg" width="76" height="76" alt="Cover Drivers License">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Drivers License, Olivia Rodrigo</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Drivers License"
+              title="Reproducir la lista de reproducción Drivers License">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -84,13 +84,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/good4u.jpg" width="76" height="76" alt="Cover Good 4 u">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Good 4 u, Olivia Rodrigo</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Good 4 u"
+              title="Reproducir la lista de reproducción Good 4 u">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -98,13 +98,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/man-down.jpg" width="76" height="76" alt="Cover Man Down">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Man Down, Rihanna</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Man Down"
+              title="Reproducir la lista de reproducción Man Down">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -112,13 +112,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/pump-it.jpg" width="76" height="76" alt="Cover de la playlist Pump It">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Pump It, Black Eyed Peas</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Pump It"
+              title="Reproducir la lista de reproducción Pump It">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -126,13 +126,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/shallow.jpg" width="76" height="76" alt="Cover Shallow">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Shallow, Lady Gaga, Bradley</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Shallow"
+              title="Reproducir la lista de reproducción Shallow">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -140,13 +140,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/stay-with-me.jpg" width="76" height="76" alt="Cover Stay with me">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Stay with me, Sam Smith</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Stay with me"
+              title="Reproducir la lista de reproducción Stay with me">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -154,13 +154,13 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits">
+          <img src="./images/the-sound-of-silence.jpg" width="76" height="76" alt="Cover The Sound Of Silence">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naturo openings & Endings</h3>
+          <h3 class="playlistB-title">Cover The Sound Of Silence</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Naturo Opening & Endings"
-              title="Reproducir la lista de reproducción Naturo Opening & Endings">
+            <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Cover The Sound Of Silence"
+              title="Reproducir la lista de reproducción Cover The Sound Of Silence">
               <i class="icon-play" aria-hidden="true"></i>
             </button>
           </div>
@@ -188,103 +188,103 @@
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/the-sound-of-silence.jpg" width="150" height="150" alt="Cover The Sound Of Silence">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">The Sound Of Silence</h3>
+        <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/stay-with-me.jpg" width="150" height="150" alt="Cover Stay With Me">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Stay With Me</h3>
+        <h4 class="playlistA-description">Sam Smith - 2014</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/shallow.jpg" width="150" height="150" alt="Cover Shallow">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Shallow</h3>
+        <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/pump-it.jpg" width="150" height="150" alt="Cover Pump It">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Pump It</h3>
+        <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/man-down.jpg" width="150" height="150" alt="Man Down">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Man Down</h3>
+        <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/drivers-license.jpg" width="150" height="150" alt="Cover Drivers License">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Drivers License</h3>
+        <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/deja-vu.jpg" width="150" height="150" alt="Cover Deja vu">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Deja Vu</h3>
+        <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/dance-monkey.jpg" width="150" height="150" alt="Cover Dance Monkey">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Dance Monkey</h3>
+        <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/good4u.jpg" width="150" height="150" alt="Cover Good 4 u">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Good 4 U</h3>
+        <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist Anime Hits">
+          <img src="./images/grand-escape.png" width="150" height="150" alt="Cover Grand Escape">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+        <h3 class="playlistA-title">Grand Escape</h3>
+        <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
