Formulario de búsqueda

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <form class="search" role="search" aria-level="Buscar por Artistas, canciones o podcast">
+    <i class="icon-search" aria-hidden="true"></i>
+    <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
+  </form>
   <section class="playlistList" aria-labelledby="region1">
     <div class="playlistList-top">
       <h2 class="playlistList-title" id="region1">
