--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <div class="navegation">
+    <button class="navagation-prev" aria-label="Volver" title="Voler">
+      <i class="icon-arrowLeft" aria-hidden="true"></i>
+    </button>
+    <button class="navagation-next" disabled aria-label="Avanzar" title="Avanzar">
+      <i class="icon-arrowRight" aria-hidden="true"></i>
+    </button>
+  </div>
   <form class="search" role="search" aria-level="Buscar por Artistas, canciones o podcast">
     <i class="icon-search" aria-hidden="true"></i>
     <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
@@ -42,6 +50,14 @@
       <h2 class="playlistList-title" id="region1">
         Buenas noches
       </h2>
+      <div class="navegation">
+        <button class="navagation-prev" aria-label="Volver" title="Voler">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navagation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
     <div class="playlistList-container">
       <div class="playlistB">
@@ -178,6 +194,14 @@
       <h2 class="playlistList-title" id="region2">
         Encuchado recientemente
       </h2>
+      <div class="navegation">
+        <button class="navagation-prev" aria-label="Volver" title="Voler">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navagation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
     <div class="playlistList-container">
       <div class="playlistA">
