--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <div class="navegation">
-    <button class="navagation-prev" aria-label="Volver" title="Voler">
-      <i class="icon-arrowLeft" aria-hidden="true"></i>
-    </button>
-    <button class="navagation-next" disabled aria-label="Avanzar" title="Avanzar">
-      <i class="icon-arrowRight" aria-hidden="true"></i>
-    </button>
+  <div class="sticky">
+    <header class="header" aria-label="Barra superior y menú del usuario">
+      <div class="navegation">
+        <button class="navagation-prev" aria-label="Volver" title="Voler">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navagation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight" aria-hidden="true"></i>
+        </button>
+      </div>
+      <form class="search" role="search" aria-level="Buscar por Artistas, canciones o podcast">
+        <i class="icon-search" aria-hidden="true"></i>
+        <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
+      </form>
+    </header>
   </div>
-  <form class="search" role="search" aria-level="Buscar por Artistas, canciones o podcast">
-    <i class="icon-search" aria-hidden="true"></i>
-    <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
-  </form>
   <section class="playlistList" aria-labelledby="region1">
     <div class="playlistList-top">
       <h2 class="playlistList-title" id="region1">
