--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <nav class="menu" aria-label="Principal">
             <ul class="menu-list">
               <li class="menuItem is-active">
-                <a href="/" class="link" aria-current="page">
+                <a href="./" class="link" aria-current="page">
                   <i class="icon-home" aria-hidden="true"></i>
                   <span>Inicio</span>
                 </a>
@@ -189,7 +189,7 @@
                     <img src="./images/dance-monkey.jpg" width="76" height="76" alt="Cover Dance Monkey">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Dance Monkey, Tones And I</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Dance Monkey, Tones And I</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Dance Monkey"
                         title="Reproducir la lista de reproducción Dance Monkey">
@@ -203,7 +203,7 @@
                     <img src="./images/deja-vu.jpg" width="76" height="76" alt="Cover Deja Vu">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Deja Vu, Olivia Rodrigo</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Deja Vu, Olivia Rodrigo</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Deja Vu"
                         title="Reproducir la lista de reproducción Deja Vu">
@@ -217,7 +217,7 @@
                     <img src="./images/drivers-license.jpg" width="76" height="76" alt="Cover Drivers License">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Drivers License, Olivia Rodrigo</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Drivers License, Olivia Rodrigo</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Drivers License"
                         title="Reproducir la lista de reproducción Drivers License">
@@ -231,7 +231,7 @@
                     <img src="./images/good4u.jpg" width="76" height="76" alt="Cover Good 4 u">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Good 4 u, Olivia Rodrigo</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Good 4 u, Olivia Rodrigo</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Good 4 u"
                         title="Reproducir la lista de reproducción Good 4 u">
@@ -245,7 +245,7 @@
                     <img src="./images/man-down.jpg" width="76" height="76" alt="Cover Man Down">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Man Down, Rihanna</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Man Down, Rihanna</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Man Down"
                         title="Reproducir la lista de reproducción Man Down">
@@ -259,7 +259,7 @@
                     <img src="./images/pump-it.jpg" width="76" height="76" alt="Cover de la playlist Pump It">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Pump It, Black Eyed Peas</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Pump It, Black Eyed Peas</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Pump It"
                         title="Reproducir la lista de reproducción Pump It">
@@ -273,7 +273,7 @@
                     <img src="./images/shallow.jpg" width="76" height="76" alt="Cover Shallow">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Shallow, Lady Gaga, Bradley</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Shallow, Lady Gaga, Bradley</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Shallow"
                         title="Reproducir la lista de reproducción Shallow">
@@ -287,7 +287,7 @@
                     <img src="./images/stay-with-me.jpg" width="76" height="76" alt="Cover Stay with me">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Stay with me, Sam Smith</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Stay with me, Sam Smith</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Stay with me"
                         title="Reproducir la lista de reproducción Stay with me">
@@ -301,7 +301,7 @@
                     <img src="./images/the-sound-of-silence.jpg" width="76" height="76" alt="Cover The Sound Of Silence">
                   </div>
                   <div class="playlistB-details">
-                    <h3 class="playlistB-title">Cover The Sound Of Silence</h3>
+                    <h3 class="playlistB-title"><a href="./song.html" class="link">Cover The Sound Of Silence</a></h3>
                     <div class="playlistB-control">
                       <button class="buttonIcon is-primary" aria-label="Reproducir la lista de reproducción Cover The Sound Of Silence"
                         title="Reproducir la lista de reproducción Cover The Sound Of Silence">
