Layout List Song

--- a/index.html
+++ b/index.html
@@ -336,7 +336,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -346,7 +348,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">The Sound Of Silence</h3>
-                  <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -356,7 +360,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Stay With Me</h3>
-                  <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -366,7 +372,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Shallow</h3>
-                  <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -376,7 +384,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Pump It</h3>
-                  <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -386,7 +396,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Man Down</h3>
-                  <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -396,7 +408,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Drivers License</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -406,7 +420,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Deja Vu</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -416,7 +432,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Dance Monkey</h3>
-                  <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -426,7 +444,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Good 4 U</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -436,7 +456,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Grand Escape</h3>
-                  <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -446,7 +468,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
               </div>
 
@@ -474,7 +498,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -484,7 +510,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">The Sound Of Silence</h3>
-                  <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -494,7 +522,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Stay With Me</h3>
-                  <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -504,7 +534,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Shallow</h3>
-                  <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -514,7 +546,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Pump It</h3>
-                  <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -524,7 +558,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Man Down</h3>
-                  <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -534,7 +570,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Drivers License</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -544,7 +582,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Deja Vu</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -554,7 +594,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Dance Monkey</h3>
-                  <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -564,7 +606,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Good 4 U</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -574,7 +618,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Grand Escape</h3>
-                  <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -584,7 +630,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
               </div>
 
@@ -612,7 +660,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -622,7 +672,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">The Sound Of Silence</h3>
-                  <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Simon & Garfunkel - 1964</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -632,7 +684,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Stay With Me</h3>
-                  <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Sam Smith - 2014</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -642,7 +696,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Shallow</h3>
-                  <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Lady Gaga, Bradley Cooper - 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -652,7 +708,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Pump It</h3>
-                  <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Black Eyed Peas - 2009</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -662,7 +720,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Man Down</h3>
-                  <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Rihanna, Walk Off The Earth - 2012</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -672,7 +732,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Drivers License</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo, Drivers License 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -682,7 +744,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Deja Vu</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -692,7 +756,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Dance Monkey</h3>
-                  <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Tones And I, The Kids Are Coming 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -702,7 +768,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Good 4 U</h3>
-                  <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Olivia Rodrigo - 2021</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -712,7 +780,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Grand Escape</h3>
-                  <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Radwimps, Weathering With You 2019</h4>
+                  </a>
                 </div>
                 <div class="playlistA">
                   <div class="playlistA-cover">
@@ -722,7 +792,9 @@
                     </button>
                   </div>
                   <h3 class="playlistA-title">Anime Hits</h3>
-                  <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  <a href="./listsong.html" class="link">
+                    <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
+                  </a>
                 </div>
               </div>
 
