--- a/listsong.html
+++ b/listsong.html
@@ -148,7 +148,7 @@
           </nav>
         </div>
       </div>
-      <div class="layout-song">
+      <div class="layout-listsong">
         <div class="page">
           <div class="sticky">
             <div class="page-block">
@@ -168,15 +168,18 @@
               </header>
             </div>
           </div>
-          <main class="song-block">
-            <section class="song" aria-labelledby="region1">
-              <div class="song-top">
-                <h2 class="song-title" id="region1">
-                  Weathering With You
+          <main class="listsong-block">
+            <section class="listsong" aria-labelledby="region1">
+              <div class="listsong-left">
+                <img src="./images/cover.png" width="312" height="183" alt="Cover de la canción">
+              </div>
+              <div class="listsong-right">
+                <h2 class="listsong-title" id="region1">
+                  Mansión Reggaetón
                 </h2>
-                <div class="song-detail">
-                  <p class="song-description">Anime Hits</p>
-                  <p class="song-follow">2,611,830 SEGUIDORES</p>
+                <div class="listsong-detail">
+                  <p class="listsong-description">Los éxitos de reggaetón del momento.</p>
+                  <p class="listsong-follow">2,611,830 SEGUIDORES</p>
                 </div>
                 <button class="buttonReproducir buttonIcon" aria-label="Reproducir" title="Reproducir">
                   REPRODUCIR
