--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="layout-sidebar">
         <div class="sidebar">
           <header class="logo">
-            <a href="/" aria-current="page">
+            <a href="./index.html" aria-current="page">
               <img src="./images/spotifu-logo.png" class="logo-image" width="112" height="32" alt="">
             </a>
           </header>
@@ -46,7 +46,7 @@
           <nav class="menu" aria-label="Principal">
             <ul class="menu-list">
               <li class="menuItem is-active">
-                <a href="./" class="link" aria-current="page">
+                <a href="./index.html" class="link" aria-current="page">
                   <i class="icon-home" aria-hidden="true"></i>
                   <span>Inicio</span>
                 </a>
